unpackaged/main/default/objects/BL_UseCase__mdt/BL_UseCase__mdt.object-meta.xml
<CustomObject>
    <label>BL Use Case</label>
    <pluralLabel>BL Use Cases</pluralLabel>
</CustomObject>