unpackaged/main/default/objects/BL_UseCase__mdt/fields/FieldsMappingJson__c.field-meta.xml
<CustomField>
    <fullName>FieldsMappingJson__c</fullName>
    <label>Fields Mapping Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>