unpackaged/main/default/objects/BL_UseCase__mdt/fields/QueryCondition__c.field-meta.xml
<CustomField>
    <fullName>QueryCondition__c</fullName>
    <label>Query Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>