unpackaged/main/default/objects/BL_UseCase__mdt/fields/QueryConditionJson__c.field-meta.xml
<CustomField>
    <fullName>QueryConditionJson__c</fullName>
    <label>QueryConditionJson</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>